k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: recipes
  namespace: apps
spec:
  selector:
    app: recipes
  ports:
    - port: 80
      targetPort: 80
